--- a/src/d.astreyko/l.gutorova/homework_3/homework_34.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_34.html
@@ -107,8 +107,29 @@ padding справа  = 10px</p>
         <span class="material-icons" style="color: rgb(26, 184, 196);">settings</span>
         <span class="material-icons" style="color: rgb(238, 102, 129);">highlight_off</span>
         <span class="material-icons" style="color: rgb(89, 167, 89);">done</span>
-
      </div>
+<p class="newpart"><b>2.1</b></p>
+      <table>
+          <colgroup>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+         </colgroup>
+         <tbody>
+             <tr>
+                 <td colspan="2"></td>
+                 <td colspan="2">A</td>
+                 <td colspan="2"></td>
+             </tr>
+             <tr></tr>
+             <tr></tr>
+         </tbody>
+
+
+      </table>
 
 
     
