--- a/src/d.astreyko/l.gutorova/homework_3/homework_34.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_34.html
@@ -70,8 +70,18 @@
         .material-icons {
             font-family: Material Icons;
         }
-
-      
+        .common {
+            border: solid black 4px;
+            border-radius: 10px;
+            text-align: center;
+            font-weight: bold;
+            width: 40px;
+            height: 40px;
+            font-family: sans-serif;
+            font-size: xx-large;
+            margin-left: 350px;
+        }
+        
     </style>
 </head>
 <body>
@@ -121,10 +131,15 @@ padding справа  = 10px</p>
          <tbody>
              <tr>
                  <td colspan="2"></td>
-                 <td colspan="2">A</td>
+                 <td colspan="2" class="common">A</td>
                  <td colspan="2"></td>
              </tr>
-             <tr></tr>
+             <tr>
+                 <td></td>
+                 <td colspan="2" class="common">B</td>
+                 <td colspan="2" class="common">C</td>
+                 <td></td>
+             </tr>
              <tr></tr>
          </tbody>
 
