--- a/src/d.astreyko/l.gutorova/homework_3/homework_345.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_345.html
@@ -70,7 +70,6 @@
         .material-icons {
             font-family: Material Icons;
         }
-
         .common {
             border: solid black 4px;
             border-radius: 10px;
@@ -79,9 +78,10 @@
             width: 40px;
             height: 40px;
             font-family: sans-serif;
-            font-size: xx-large;
-        
+            font-size: xx-large;  
         }
+
+
         
     </style>
 </head>
@@ -120,7 +120,7 @@ padding справа  = 10px</p>
         <span class="material-icons" style="color: rgb(89, 167, 89);">done</span>
      </div>
 <p class="newpart"><b>2.1</b></p>
-      <table>
+      <table style="margin: auto;">
           <colgroup>
             <col>
             <col>
@@ -141,7 +141,11 @@ padding справа  = 10px</p>
                  <td colspan="2" class="common">C</td>
                  <td></td>
              </tr>
-             <tr></tr>
+             <tr>
+                <td colspan="2" class="common">D</td>
+                <td colspan="2" class="common">E</td>
+                <td colspan="2" class="common">F</td>
+             </tr>
          </tbody>
 
 
