--- a/src/d.astreyko/l.gutorova/homework_3/homework_345.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_345.html
@@ -130,7 +130,22 @@ padding справа  = 10px</p>
             <col>
          </colgroup>
          <tbody>
-             
+            <tr>
+                <td colspan="2"></td>
+                <td colspan="2" class="cell blue">A</td>
+                <td colspan="2"></td>
+            </tr>
+            <tr>
+                <td class="cell_red"></td>
+                <td colspan="2" class="cell cell_red">B</td>
+                <td colspan="2" class="cell green">C</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td colspan="2" class="cell blue">D</td>
+                <td colspan="2" class="cell cell_red">E</td>
+                <td colspan="2" class="cell green">F</td>
+            </tr>
              
          </tbody>
 
