--- a/src/d.astreyko/l.gutorova/homework_3/homework_345.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_345.html
@@ -91,6 +91,7 @@
             border-color: rgb(89, 167, 89);
             color: rgb(89, 167, 89);
         }
+        
 
 
         
@@ -160,7 +161,7 @@ padding справа  = 10px</p>
          </tbody>
       </table>
 <p class="newpart"><b>3.0</b></p>
-<table style="margin: auto;">
+<table>
     <tbody>
         <colgroup style="width: 50px;">
             <col>
