--- a/src/d.astreyko/l.gutorova/homework_3/homework_34567.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_34567.html
@@ -7,7 +7,7 @@
     <title>Homework</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
       rel="stylesheet">
-      <link rel="stylesheet" href="./homework_3.css">
+      <link rel="stylesheet" type="text/css" href="./homework_3.css">
 </head>
 <body>
 <p class="newpart"><b>1.1</b></p>
@@ -72,29 +72,13 @@ padding справа  = 10px</p>
             </tr>            
          </tbody>
       </table>
-<p class="newpart"><b>3.0</b></p>
-    <table>
-    <tbody>
-        <colgroup>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-        </colgroup>
-        <tr>
-            <td colspan="3"></td>
-            <td colspan="3"></td>           
-        </tr>
-        <tr>
-            <td colspan="2"></td>
-            <td colspan="2"></td>
-            <td colspan="2"></td>
-        </tr>
-    </tbody>
-    </table>
+<div class="span_abc">
+    <span>А</span>
+<div>><span>B</span><span>C</span></div>
+<div><span>D</span><span>E</span><span>F</span></div>
+</div>
 
+    
 
     
 
