--- a/src/d.astreyko/l.gutorova/homework_3/homework_34567891.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_34567891.html
@@ -39,9 +39,9 @@ padding справа  = 10px</p>
 
 <p class="newpart"><b>1.3</b></p>
      <div class="ramka_5">
-        <span class="material-icons" style="color: rgb(26, 184, 196);">settings</span>
-        <span class="material-icons" style="color: rgb(238, 102, 129);">highlight_off</span>
-        <span class="material-icons" style="color: rgb(89, 167, 89);">done</span>
+        <span class="material-icons" style="color: rgb(26, 184, 196); font-size: 45px;">settings</span>
+        <span class="material-icons" style="color: rgb(238, 102, 129); font-size: 60px;">highlight_off</span>
+        <span class="material-icons" style="color: rgb(89, 167, 89); font-size: 45px;">done</span>
      </div>
 <p class="newpart"><b>2.1</b></p>
       <table style="margin: auto;">
@@ -72,11 +72,11 @@ padding справа  = 10px</p>
             </tr>            
          </tbody>
       </table>
-<div class="span_abc">
-    <span>А</span>
-<div>><span>B</span><span>C</span></div>
-<div><span>D</span><span>E</span><span>F</span></div>
-</div>
+
+
+
+
+
 
     
 
