--- a/src/d.astreyko/l.gutorova/homework_3/homework_32345.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_32345.html
@@ -72,6 +72,71 @@ padding справа  = 10px</p>
             </tr>            
          </tbody>
       </table>
+<p class="newpart"><b>3.0</b></p>
+    <table class="tabl_3_0">
+        <colgroup style="width: 100px;">
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+        </colgroup>
+         <tbody>
+             <tr>
+                 <td colspan="3"></td>
+                 <td colspan="3"></td>
+             </tr>
+             <tr>
+                 <td colspan="2"></td>
+                 <td colspan="2"></td>
+                 <td colspan="2"></td>
+             </tr>
+         </tbody>
+    </table>
+<p class="newpart"><b>3.1</b></p>
+    <table class="tabl_3_1">
+        <colgroup style="width: 150px;">
+        <col>
+        <col>
+        <col>
+        <col>
+        </colgroup>
+        <tbody>
+            <tr>
+                <th>Таблица 1</th>
+                <th colspan="3"></th>       
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="3"></td>
+            </tr>
+        </tbody>
+    </table>
+<p class="newpart"><b>3.2</b></p>
+    <table class="tabl_3_2">
+        <colgroup style="width: 200px;">
+        <col>
+        <col>
+        <col>
+        </colgroup>
+        <tbody>
+            <tr>
+                <th rowspan="2" colspan="2"></th>
+                <th style="text-align: right;">Таблица 2</th>
+            </tr>
+            <tr>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="2"></td>
+            </tr>
+        </tbody>
+
+
+    </table>
+
 
 
 
