--- a/src/d.astreyko/l.gutorova/homework_3/homework_323456.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_323456.html
@@ -123,7 +123,7 @@ padding справа  = 10px</p>
         <tbody>
             <tr>
                 <th rowspan="2" colspan="2"></th>
-                <th style="text-align: right;">Таблица 2</th>
+                <th>Таблица 2</th>
             </tr>
             <tr>
                 <td></td>
@@ -131,6 +131,26 @@ padding справа  = 10px</p>
             <tr>
                 <td></td>
                 <td colspan="2"></td>
+            </tr>
+        </tbody>
+    </table>
+<p class="newpart"><b>3.3</b></p>
+    <table class="tabl_3_3">
+        <colgroup style="width: 125px;">
+            <col>
+            <col>
+        </colgroup>
+        <tbody>
+            <tr>
+                <th>Маленька</th>
+                <th>Табличка</th>
+            </tr>
+            <tr>
+                <td colspan="2"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
             </tr>
         </tbody>
 
