--- a/src/d.astreyko/l.gutorova/homework_3/homework_3.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3.html
@@ -153,9 +153,8 @@ padding справа  = 10px</p>
                 <td></td>
             </tr>
         </tbody>
-
-
     </table>
+<p class="newpart"><b>3.4</b></p>
 
 
 
