--- a/src/d.astreyko/lesson_5/abc.html
+++ b/src/d.astreyko/lesson_5/abc.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <h1>rowspan</h1>
-<table class="table-abc">
+<table class="table-abc" border="1">
     <colgroup>
         <col>
         <col>
