--- a/src/d.astreyko/l.gutorova/homework_3/homework_345.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_345.html
@@ -155,6 +155,75 @@ padding справа  = 10px</p>
         </tbody>
     </table>
 <p class="newpart"><b>3.4</b></p>
+    <table class="tabl_3_4">
+        <colgroup style="width: 150px;">
+        <col>
+        <col>
+        <col>
+        <col>
+    </colgroup>
+    <tbody>
+        <tr>
+            <td class="color_green"></td>
+            <td class="color_green"></td>
+            <td class="color_green"></td>
+            <td rowspan="2" class="color_orange"></td>
+        </tr>
+        <tr>
+            <td class="color_green"></td>
+            <td rowspan="2" class="color_orange"></td>
+            <td class="color_green"></td>
+        </tr>
+        <tr>
+            <td rowspan="2" class="color_orange"></td>
+            <td colspan="2" class="color_orange"></td>
+        </tr>
+        <tr>
+            <td class="color_green"></td>
+            <td class="color_green"></td>
+            <td class="color_green"></td>
+        </tr>
+    </tbody>
+    </table>
+<p class="newpart"><b>3.5</b></p>
+    <table class="tabl_3_5">
+        <colgroup style="width: 87px;">
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+        </colgroup>
+        <tbody>
+            <tr>
+                <td colspan="3" style="text-align:left; padding-left: 5px;">Привет</td>
+                <td rowspan="5" style="text-align: center; white-space: pre-wrap;">Я весьма странная таблица</td>
+                <td colspan="2"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td colspan="3" rowspan="2" style="height: 140px;"></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td colspan="3" rowspan="2" style="height: 140px;"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="2"></td>
+                <td colspan="3" style="text-align:right; padding-right: 5px;">Зато заняла нас)</td>
+            </tr>
+        </tbody>
+    </table>
 
 
 
