--- a/src/d.astreyko/l.gutorova/homework_3/homework_3.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3.html
@@ -224,6 +224,66 @@ padding справа  = 10px</p>
             </tr>
         </tbody>
     </table>
+<p class="newpart"><b>3.6</b></p>
+    <table class="tabl_3_6">
+        <colgroup style="width: 120px;">
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+        </colgroup>
+        <tbody>
+            <tr>
+                <td colspan="3">Табличечка</td>
+                <td>Субъект</td>
+                <td>Объект</td>
+            </tr>
+            <tr>
+                <td rowspan="5">Ед. числ</td>
+                <td colspan="2">1 Лицо</td>
+                <td>Я</td>
+                <td>Меня</td>
+            </tr>
+            <tr>
+                <td colspan="2">2 Лицо</td>
+                <td>Ты</td>
+                <td>Тебя</td>
+            </tr>
+            <tr>
+                <td rowspan="3">3 Лицо</td>
+                <td>&#9794;</td>
+                <td>Он</td>
+                <td>Его</td>
+            </tr>
+            <tr>
+                <td>&#9792;</td>
+                <td>Она</td>
+                <td>Ее</td>
+            </tr>
+            <tr>
+                <td>&ordm;</td>
+                <td>Оно</td>
+                <td>Его</td>
+            </tr>
+            <tr>
+                <td rowspan="3">Множ. числ.</td>
+                <td colspan="2">1 Лицо</td>
+                <td>Мы</td>
+                <td>Нас</td>
+            </tr>
+            <tr>
+                <td colspan="2">2 Лицо</td>
+                <td>Вы</td>
+                <td>Вас</td>
+            </tr>
+            <tr>
+                <td colspan="2">3 Лицо</td>
+                <td>Они</td>
+                <td>Их</td>
+            </tr>
+        </tbody>
+    </table>
 
 
 
