--- a/src/d.astreyko/l.gutorova/homework_3/homework_3.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3.html
@@ -45,7 +45,7 @@ padding справа  = 10px</p>
      </div>
 <p class="newpart"><b>2.1</b></p>
       <table style="margin: auto;">
-          <colgroup style="width: 20px;">
+          <colgroup style="width: 47px;">
             <col>
             <col>
             <col>
@@ -230,14 +230,17 @@ padding справа  = 10px</p>
             <col>
             <col>
             <col>
-            <col>
-            <col>
+            <col class="color_blue">
+            <col class="color_green">
         </colgroup>
-        <tbody>
-            <tr>
-                <td colspan="3">Табличечка</td>
+        <thead>
+            <tr class="zagolovok">
+                <td colspan="3" style="font-size: large; font-weight: bold;">Табличечка</td>
                 <td>Субъект</td>
                 <td>Объект</td>
+        </thead>
+        <tbody>
+
             </tr>
             <tr>
                 <td rowspan="5">Ед. числ</td>
