--- a/src/d.astreyko/l.gutorova/homework_3/homework_345.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_345.html
@@ -39,9 +39,9 @@ padding справа  = 10px</p>
 
 <p class="newpart"><b>1.3</b></p>
      <div class="ramka_5">
-        <span class="material-icons" style="color: rgb(26, 184, 196); line-height: 5px; font-size: 45px;">settings</span>
-        <span class="material-icons" style="color: rgb(238, 102, 129); line-height: 3px; font-size: 60px;">highlight_off</span>
-        <span class="material-icons" style="color: rgb(89, 167, 89); line-height: 5px; font-size: 45px;">done</span>
+        <span class="material-icons" style="color: rgb(26, 184, 196);">settings</span>
+        <span class="material-icons" style="color: rgb(238, 102, 129);vertical-align:-13px;  font-size: 70px;">highlight_off</span>
+        <span class="material-icons" style="color: rgb(89, 167, 89); ">done</span>
      </div>
 <p class="newpart"><b>2.1</b></p>
       <table style="margin: auto;">
@@ -72,6 +72,18 @@ padding справа  = 10px</p>
             </tr>            
          </tbody>
       </table>
+      
+<div class="A"><div class="cub_A" style="border-color: rgb(33, 198, 204);"><span style="color: rgb(33, 198, 204);">A</span></div></div>
+
+<div class="BC">
+<div class="cub_B" style="border-color: red;"><span style="color: red;">B</span></div>
+<div class="cub_C" style="border-color: rgb(89, 167, 89);"><span style="color: rgb(89, 167, 89);">C</span></div></div>
+
+<div class="DEF">
+<div class="cub_D" style="border-color: rgb(33, 198, 204);"><span style="color: rgb(33, 198, 204);">D</span></div>
+<div class="cub_E" style="border-color: rgb(89, 167, 89);"><span style="color: rgb(89, 167, 89);">E</span></div>
+<div class="cub_F" style="border-color: red;"><span style="color: red;">F</span></div></div>
+
 <p class="newpart"><b>3.0</b></p>
     <table class="tabl_3_0">
         <colgroup style="width: 100px;">
