--- a/src/d.astreyko/l.gutorova/homework_3/homework_34567.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_34567.html
@@ -300,6 +300,48 @@ padding справа  = 10px</p>
         </tbody>
     </table>
 
+<p class="newpart"><b>3.7</b></p>    
+    <table class="tabl_3_7">
+        <colgroup style="width: 100px;">
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+    </colgroup>
+    <tbody>
+        <tr>
+            <td class="grey2"></td>
+            <td colspan="4"></td>
+            <td class="red2"></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td class="grey2"></td>
+            <td colspan="2"></td>
+            <td class="red2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td colspan="2"></td>
+            <td colspan="2" class="black2"></td>
+            <td colspan="2"></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td class="blue2"></td>
+            <td colspan="2"></td>
+            <td class="green2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class="blue2"></td>
+            <td colspan="4"></td>
+            <td class="green2"></td>
+        </tr>
+    </tbody>
+</table>
 
 
 
