--- a/src/d.astreyko/l.gutorova/homework_3/homework_34567.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_34567.html
@@ -343,6 +343,11 @@ padding справа  = 10px</p>
     </tbody>
 </table>
 
+<div class="top_right_corner"></div>
+<div class="left_line"></div>
+<div class="bottom_right_corner"></div>
+<div class="top_line"></div>
+<div class="bottom_line"></div>
 
 
 
