--- a/src/d.astreyko/l.gutorova/homework_3/homework_3-ramka.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3-ramka.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     
-  
+    <div>
+        <span class="top-right_corner"></span><span class="line-vert_top"></span><span class="top-left_corner"></span>
+    </div>
+   
 
 </body>
 </html>
