--- a/src/d.astreyko/l.gutorova/homework_3/homework_3-ramka.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3-ramka.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     
-    <div>
-        <span class="top-right_corner"></span><span class="line-vert_top"></span><span class="top-left_corner"></span>
+    <div style="height: 100px; width: 50vw;">
+        <div class="top-right_corner"></div>
+        <div class="line_top"></div>
+        <div class="top-left_corner"></div>
     </div>
    
 
