--- a/src/d.astreyko/l.gutorova/homework_3/homework_3-ramka.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3-ramka.html
@@ -7,14 +7,23 @@
     <title>Homework_3-ramka</title>
     <link rel="stylesheet" type="text/css" href="./homework_3-ramka.css">
 </head>
-<body>
-    
-    <div style="height: 100px; width: 50vw;">
-        <div class="top-right_corner"></div>
-        <div class="line_top"></div>
-        <div class="top-left_corner"></div>
+<body>   
+<div style=" width: 50%; height: 50%;" >
+        <div style="height: 53px;">
+            <div class="top-left_corner"></div>
+            <div class="line"></div>
+            <div class="top-right_corner"></div>
+        </div>
+        <div>
+            <div class="line-vert"></div>
+            <div class="line-vert"></div>
+        </div>
+       <div>
+            <div class="bottom-left_corner"></div>
+            <div class="line"></div>
+            <div class="bottom-right_corner"></div>
+        </div>
     </div>
-   
 
 </body>
 </html>
