--- a/src/d.astreyko/l.gutorova/homework_3/homework_3-ramka.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3-ramka.html
@@ -15,8 +15,8 @@
             <div class="top-right_corner"></div>
         </div>
         <div>
-            <div class="line-vert"></div>
-            <div class="line-vert"></div>
+            <div class="line-vert-left"></div>
+            <div class="line-vert-right"></div>
         </div>
        <div>
             <div class="bottom-left_corner"></div>
