--- a/src/d.astreyko/l.gutorova/homework_3/homework_3-ramka.html
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3-ramka.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" type="text/css" href="./homework_3-ramka.css">
 </head>
 <body>   
-<div style=" width: 50%; height: 50%;" >
+<div style=" width: 50%; height: 50%; min-width: 50%;" >
         <div style="height: 53px;">
             <div class="top-left_corner"></div>
-            <div class="line"></div>
+            <div class="line_top"></div>
             <div class="top-right_corner"></div>
         </div>
         <div>
@@ -20,7 +20,7 @@
         </div>
        <div>
             <div class="bottom-left_corner"></div>
-            <div class="line"></div>
+            <div class="line_bottom"></div>
             <div class="bottom-right_corner"></div>
         </div>
     </div>
