added home work

--- a/src/d.grinevich/homework_3/homework_3.html
+++ b/src/d.grinevich/homework_3/homework_3.html
@@ -397,10 +397,52 @@
             <td  class="table_parammmone color_light_green" ></td>
         </tr>
     </table>
+    <p class="heading margin_rule">4.1</p>
+
+</div>
+<div style="width: 50%; margin-top: 50px; margin-right: 290px; "> 
+    <div style="background: url('./toplyright.png') repeat-y right;background-size: 30px 121px;">
+        <div style="background: url('./toplyleft.png') repeat-y left ;background-size: 30px 121px;">
+            <div style="background: url('topl.png') repeat-x top; background-size: 163px 30px;">
+                <div style="background: url('./toplbott.png') repeat-x bottom; background-size: 163px 30px;">
+                    <div style="background: url('./toplc2.png') no-repeat left top; background-size: 70px 70px;">
+                        <div style="background:url('./toplc3.png') no-repeat top right; background-size: 70px 70px;">
+                            <div style="background:url('./toplc4.png') no-repeat bottom right;background-size: 70px 70px;">
+                                <div style="background:url('./toplc.png') no-repeat bottom left;background-size: 70px 70px;">
+    
+
+                                    <div style="padding: 80px; text-align: justify; white-space: pre;">
+ По порядку все планеты
+Назовёт любой из нас:
+Раз - Меркурий,
+Два - Венера,
+Три - Земля,
+Четыре - Марс.
+Пять - Юпитер,
+Шесть - Сатурн,
+Семь - Уран,
+За ним - Нептун.
+Он восьмым идёт по счёту.
+А за ним уже, потом,
+И девятая планета
+Под названием Плутон.
+(Автор: Аркадий Хайт)
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 
 
+<p class="heading margin_rule">Дополнительное задание
+    4.2*</p>
 
 </body>
 </html>
