--- a/src/l.gutorova/Homework_4/Task_7/Homework_7.html
+++ b/src/l.gutorova/Homework_4/Task_7/Homework_7.html
@@ -17,7 +17,7 @@
         p:hover {
         background-color:green;
         }
-        p:hover p {
+        p:hover+p {
             background-color:red;
         }
     
