--- a/src/l.gutorova/Homework_4/Task_11/Homework_11.html
+++ b/src/l.gutorova/Homework_4/Task_11/Homework_11.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="./chess.css">
     <style>
         .container {
             display: flex;
