move l.gutorova folder

--- a/src/l.gutorova/homework_3/homework_3-ramka.html
+++ b/src/l.gutorova/homework_3/homework_3-ramka.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework_3-ramka</title>
-    <link rel="stylesheet" type="text/css" href="./homework_3-ramka.css">
+    <link rel="stylesheet" type="text/css" href="homework_3-ramka.css">
 </head>
 <body>   
 <div style=" width: 50%; height: 50%; min-width: 50%;" >
