--- a/src/l.gutorova/homework_3/homework_3.html
+++ b/src/l.gutorova/homework_3/homework_3.html
@@ -7,7 +7,7 @@
     <title>Homework</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
       rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="./homework_3.css">
+      <link rel="stylesheet" type="text/css" href="homework_3.css">
 </head>
 <body>
 <p class="newpart"><b>1.1</b></p>
