--- a/src/l.gutorova/Homework_4/Task_1/Homework_4_1.html
+++ b/src/l.gutorova/Homework_4/Task_1/Homework_4_1.html
@@ -3,7 +3,7 @@
       <head>
         <meta charset="utf-8"/>
         <title>Selectors: Type Selectors</title>
-        <link rel="stylesheet" href="../Task_1/task_1.css"/>
+        <link rel="stylesheet" href="./task_1.css"/>
         <style>
          body {
             background-color: #fff;
