--- a/src/l.gutorova/Homework_4/Task_5/Homework_5.html
+++ b/src/l.gutorova/Homework_4/Task_5/Homework_5.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Selectors: attribute selectors</title>
-    <link rel="stylesheet" href="task_5.css">
+    <link rel="stylesheet" href="./task_5.css">
 
     <style>
       body {
