--- a/src/l.gutorova/Homework_4/Task_2/Homework_4_2.html
+++ b/src/l.gutorova/Homework_4/Task_2/Homework_4_2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Selectors: Class and ID Selectors</title>
-    <link rel="stylesheet" href="../Task_2/task_2.css"/>
+    <link rel="stylesheet" href="./task_2.css"/>
     <style>
      body {
         background-color: #fff;
