--- a/src/a.yantsevich/homeworks/homework_4/task_3/hw_4_3.html
+++ b/src/a.yantsevich/homeworks/homework_4/task_3/hw_4_3.html
@@ -2,73 +2,45 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./hw_4_3.css">
+    <meta charset="utf-8" />
+    <title>Selectors: Pseudo-class and Pseudo-element Selectors</title>
+    <link rel="stylesheet" href="./hw_4_3.css" />
 </head>
 
 <body>
-    <a href="https://yandex.by">ссылочка</a>
-    <a href="https://www.youtube.com">ссылочка 2</a>
+
     <div class="container">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt corporis minima neque eligendi repellendus necessitatibus voluptate aspernatur accusantium alias quisquam dignissimos nisi atque, nam, praesentium adipisci et similique repellat
-            possimus?
-        </p>
-        <p>Aspernatur natus velit ipsum? Ratione ullam fuga exercitationem, voluptates doloremque deserunt, quod incidunt magni fugiat voluptatem sunt temporibus. Quis iusto et iure. Nam eius enim error deserunt commodi odio tempora!</p>
-        <p>Consequatur assumenda neque quo ipsam dicta, dolores quibusdam earum eum, atque sequi error amet voluptatum maiores dolorem quaerat fugit necessitatibus accusamus culpa incidunt magnam laborum velit. Dicta illum aspernatur eius?</p>
-        <p>Nihil fugit, molestias, ea, ducimus illum ipsa exercitationem aut laborum neque ab necessitatibus maxime voluptatibus voluptate. Quae iste eveniet cum libero, ullam deserunt ad veritatis voluptatem, at aliquid eos facere.</p>
-        <p>Mollitia ratione impedit quis sapiente neque, modi, dolorum odio animi tempora amet dolorem consectetur ad recusandae hic id nihil illo veniam numquam, quas ab! Veritatis, dignissimos voluptates! Fugiat, sint ratione?</p>
-        <p>Molestiae sequi magnam facere quia atque vero mollitia distinctio ducimus pariatur adipisci? Totam, qui officia repellendus perspiciatis animi, pariatur magnam eveniet eos fugiat id eaque iure eius quaerat veniam labore.</p>
-        <p>Ut facilis odio placeat illo sit beatae in vero dolor possimus. Ad nemo, dolorum ducimus error minima fugiat quaerat saepe nostrum officiis maxime et unde? Quod velit praesentium consectetur quas?</p>
-        <p>Numquam voluptates ut minima iste possimus cupiditate ullam voluptatum itaque corrupti provident! Similique, praesentium laudantium ipsum aperiam aspernatur blanditiis ut ea dicta repellat, corporis recusandae dolor vel ipsa soluta eveniet?</p>
-        <p>Minima facilis quisquam ab enim commodi atque qui nam! Quam omnis perspiciatis facere sint excepturi accusantium culpa pariatur necessitatibus reiciendis consectetur doloremque harum, deleniti ipsum, repellendus itaque. Facere, recusandae eum?</p>
-        <p>Ea quidem nostrum atque expedita perspiciatis animi dignissimos harum nemo quibusdam exercitationem aspernatur quos aperiam, dolore autem ad voluptate. Fugiat eum quisquam dignissimos quam quaerat deleniti doloremque aliquid tempore beatae!</p>
+        <p>Veggies es
+            <a href="http://example.com">bonus vobis</a>, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
+        <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+        <table>
+            <tr>
+                <th>Fruits</th>
+                <th>Vegetables</th>
+            </tr>
+            <tr>
+                <td>Apple</td>
+                <td>Potato</td>
+            </tr>
+            <tr>
+                <td>Orange</td>
+                <td>Carrot</td>
+            </tr>
+            <tr>
+                <td>Tomato</td>
+                <td>Parsnip</td>
+            </tr>
+            <tr>
+                <td>Kiwi</td>
+                <td>Onion</td>
+            </tr>
+            <tr>
+                <td>Banana</td>
+                <td>Beet</td>
+            </tr>
+        </table>
     </div>
-    <table>
-        <tr>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique totam recusandae natus a! Eum, dicta quibusdam! Eligendi atque magnam commodi ullam, corporis veritatis enim similique, quos culpa ab labore id!</td>
-            <td>Ex harum sapiente aut in minus distinctio eveniet? Omnis temporibus excepturi consequatur, sequi aperiam minima harum assumenda maiores minus vero odit ea, dolorem amet eaque deleniti. Iste eveniet assumenda enim.</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum minima molestias, repudiandae corporis omnis natus eum neque perferendis modi non numquam cum dignissimos nesciunt praesentium, harum enim, optio rem maiores?</td>
-            <td>Veniam dolor harum id est! Suscipit, maiores iste ipsum consequuntur voluptas quidem, rem modi possimus ea dolores, molestiae delectus dolorum earum nisi quibusdam. Dolorum alias qui voluptatibus voluptatum, quas architecto!</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo, exercitationem ullam saepe itaque magni veniam distinctio magnam esse dignissimos quibusdam nostrum sunt eligendi ab omnis? Possimus provident voluptates praesentium fugit.</td>
-            <td>Ratione magnam temporibus fugit hic, modi dolor unde non possimus ab minima est, doloribus odit officia ut suscipit vitae doloremque libero commodi tempora, deserunt nemo quasi. Laboriosam nobis libero nostrum.</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, vero, eos minus excepturi accusamus numquam quos, adipisci saepe ducimus tempora consequuntur quibusdam vel voluptates. Dolorum quae odio facilis non reprehenderit.</td>
-            <td>Explicabo vitae repellendus, assumenda in unde accusantium sunt aliquid exercitationem vero esse saepe doloribus nisi provident est alias nesciunt odit culpa quaerat facere quae aliquam cupiditate nobis. Id, placeat itaque!</td>
-        </tr>
-        <tr>
-            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam velit id quasi rem nesciunt! Itaque dolor soluta magni, earum obcaecati nihil excepturi laboriosam similique optio quam, numquam architecto culpa ducimus!</td>
-            <td>Facere commodi quia quam eum quasi alias voluptas. Dolore soluta libero ad beatae nisi culpa illo earum? Totam possimus sed quibusdam tenetur odit tempore perferendis, commodi quod tempora iste laudantium.</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus minus doloribus quibusdam ipsa omnis iusto et eligendi ex veniam! Explicabo tempora quasi quibusdam ipsa quae eos dicta, nam sunt officia.</td>
-            <td>Totam doloribus minus, deserunt placeat, dicta perspiciatis voluptate architecto earum delectus ducimus magnam cupiditate excepturi labore nulla, ex debitis culpa optio pariatur sed ipsa. Similique voluptates deleniti quas libero praesentium?</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid sapiente aspernatur hic vero voluptate sunt possimus voluptas dicta atque eum accusantium nesciunt quam dignissimos ducimus ex beatae repudiandae, suscipit ratione?</td>
-            <td>Quibusdam quod in dolorum consectetur ut et, nostrum molestiae tenetur inventore! Ducimus aliquid similique eum numquam ut, odio sed iure sequi corrupti ab officiis harum tempora vitae? Modi, ex facilis?</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam facere dolorem, provident voluptatibus voluptates accusantium dicta! Delectus quis numquam est iure, cupiditate cumque quo architecto sit dolorum illo quaerat eaque?</td>
-            <td>Officia sapiente eos reprehenderit debitis dolorem magni sunt libero pariatur autem aliquam possimus, fugit recusandae id quod architecto nulla sequi quasi error illum accusantium sed molestias sint eveniet. Quas, ullam.</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, dolorum ea. Vel alias quisquam accusamus doloribus magnam qui, corporis quam sit soluta ratione nisi quasi aspernatur dolore, labore voluptatibus quas?</td>
-            <td>Minima cupiditate asperiores in, quaerat debitis excepturi laudantium ipsa necessitatibus minus nulla tenetur doloremque sunt dicta adipisci, porro magnam ex quidem voluptate praesentium voluptates atque accusantium. Rerum, totam? Recusandae,
-                placeat?</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam veritatis nihil quia est! Perferendis assumenda ab quis? Qui dignissimos molestiae numquam, reiciendis error soluta nam? Aperiam similique itaque commodi tempore.</td>
-            <td>Fugit, totam veniam. Provident sapiente architecto nihil ipsum harum dignissimos ipsa non at molestias esse maxime unde dolores voluptatem iste quaerat molestiae corrupti consectetur quibusdam perferendis doloremque, voluptate amet perspiciatis.</td>
-        </tr>
-    </table>
+
 </body>
 
 </html>
