--- a/src/a.yantsevich/homeworks/homework_4/task_5/hw_4_5.html
+++ b/src/a.yantsevich/homeworks/homework_4/task_5/hw_4_5.html
@@ -1,29 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./hw_4.css">
+    <meta charset="utf-8">
+    <title>Selectors: attribute selectors</title>
+    <link rel="stylesheet" href="hw_4_5.css">
 </head>
 
 <body>
-    <div class="first-task">
-        <h1 class="h1_blue">
-            Blue Header
-        </h1>
-        <h2 class="h2_white">
-            White Header
-        </h2>
-        <span class="big-font">
-        <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla enim quia perspiciatis accusamus fuga ullam numquam exercitationem tempora minus consectetur? Culpa excepturi sequi facilis laboriosam provident vel quidem id doloribus!
-        </span>
-    </div>
-    <div class="second-task">
-        <span id="special">yellow background</span>
-    </div>
+    <ul>
+        <li>
+            <a href="https://example.com">Link 1</a>
+        </li>
+        <li>
+            <a href="http://example.com" title="Visit example.com">Link 2</a>
+        </li>
+        <li>
+            <a href="/contact">Link 3</a>
+        </li>
+        <li>
+            <a href="../contact/index.html">Link 4</a>
+        </li>
+    </ul>
+
 </body>
 
 </html>
