--- a/src/a.yantsevich/homeworks/homework_4/task_7/hw_4_7.html
+++ b/src/a.yantsevich/homeworks/homework_4/task_7/hw_4_7.html
@@ -3,27 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./hw_4.css">
+    <title>Title</title>
+    <link rel="stylesheet" href="./hw_4_7.css">
 </head>
 
 <body>
-    <div class="first-task">
-        <h1 class="h1_blue">
-            Blue Header
-        </h1>
-        <h2 class="h2_white">
-            White Header
-        </h2>
-        <span class="big-font">
-        <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla enim quia perspiciatis accusamus fuga ullam numquam exercitationem tempora minus consectetur? Culpa excepturi sequi facilis laboriosam provident vel quidem id doloribus!
-        </span>
-    </div>
-    <div class="second-task">
-        <span id="special">yellow background</span>
-    </div>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
+    <p>Параграф</p>
 </body>
 
 </html>
