--- a/src/a.yantsevich/homeworks/homework_4/task_1/hw_4_1.html
+++ b/src/a.yantsevich/homeworks/homework_4/task_1/hw_4_1.html
@@ -10,15 +10,14 @@
 </head>
 
 <body>
-    <h1 class="h1_blue">
-        Blue Header
-    </h1>
-    <h2 class="h2_white">
-        White Header
-    </h2>
-    <span class="big-font">
-        <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla enim quia perspiciatis accusamus fuga ullam numquam exercitationem tempora minus consectetur? Culpa excepturi sequi facilis laboriosam provident vel quidem id doloribus!
-    </span>
+    <div class="container">
+        <h1 class="h1_blue">This is a heading</h1>
+        <p>Veggies es
+            <span class="big-font">bonus vobis</span>, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
+        <h2 class="h2_white">A level 2 heading</h2>
+        <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+
+    </div>
 </body>
 
 </html>
