--- a/src/a.yantsevich/homeworks/homework_4/task_4/hw_4_4.html
+++ b/src/a.yantsevich/homeworks/homework_4/task_4/hw_4_4.html
@@ -2,28 +2,39 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./hw_4.css">
+    <meta charset="utf-8" />
+    <title>Selectors: Combinators</title>
+    <link rel="stylesheet" href="./hw_4_4.css" />
+    <style>
+
+    </style>
+
+    <style class="editable"></style>
 </head>
 
 <body>
-    <div class="first-task">
-        <h1 class="h1_blue">
-            Blue Header
-        </h1>
-        <h2 class="h2_white">
-            White Header
-        </h2>
-        <span class="big-font">
-        <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla enim quia perspiciatis accusamus fuga ullam numquam exercitationem tempora minus consectetur? Culpa excepturi sequi facilis laboriosam provident vel quidem id doloribus!
-        </span>
+
+    <div class="container">
+        <h2>This is a heading</h2>
+        <p>This paragraph comes after the heading.</p>
+        <p>This is the second paragraph.</p>
+
+        <h2>Another heading</h2>
+        <p>This paragraph comes after the heading.</p>
+
+        <ul class="list">
+            <li>One</li>
+            <li>Two
+                <ul>
+                    <li>2.1</li>
+                    <li>2.2</li>
+                </ul>
+            </li>
+            <li>Three</li>
+        </ul>
+
     </div>
-    <div class="second-task">
-        <span id="special">yellow background</span>
-    </div>
+
 </body>
 
 </html>
