--- a/src/a.konnov/homework_4/index.html
+++ b/src/a.konnov/homework_4/index.html
@@ -19,5 +19,6 @@
 <a href="./pages/zadanie10.html" target="blank"><p>Задание 10</p></a>
 <a href="./pages/zadanie11.html" target="blank"><p>Задание 11</p></a>
 <a href="./pages/zadanie12.html" target="blank"><p>Задание 12</p></a>
+<a href="./pages/zadanie13.html" target="blank"><p>Задание 13</p></a>
 </body>
 </html>
