--- a/src/l.gutorova/homework_5/Task_3/Task_3.html
+++ b/src/l.gutorova/homework_5/Task_3/Task_3.html
@@ -8,20 +8,33 @@
     <link rel="stylesheet" type="text/css" href="Task_3.css">
 </head>
 <body>
-    <h3 style="text-align: center;" >3.1</h3>
+    <h3 style="text-align: center;" >position: relative 3.1</h3>
  <div class="outsise_cub">
     <div class="inside_cub-1">
          <div class="small_cub-1"></div>
     </div>
 </div>
-<h3 style="text-align: center;" >3.2</h3>
+<h3 style="text-align: center;" >position: absolute 3.1</h3>
+ <div class="outsise_cub">
+    <div class="inside_cub-1">
+         <div class="small_cub-absolute"></div>
+    </div>
+</div>
+<h3 style="text-align: center;" >position: relative 3.2</h3>
  <div class="outsise_cub">
     <div class="inside_cub-2">
          <div class="small_cub-2"></div>
          <div class="small_cub-3"></div>
     </div>
 </div>
-<h3 style="text-align: center;" >3.3</h3>
+<h3 style="text-align: center;" >position: absolute 3.2</h3>
+ <div class="outsise_cub">
+    <div class="inside_cub-2">
+         <div class="small_cub-2-absolute"></div>
+         <div class="small_cub-3-absolute"></div>
+    </div>
+</div>
+<h3 style="text-align: center;" >position: relative 3.3</h3>
  <div class="outsise_cub">
     <div class="traffic_lights">
          <div class="circle red"></div>
@@ -29,13 +42,30 @@
          <div class="circle green"></div>
     </div>
 </div>
-<h3 style="text-align: center;" >3.4</h3>
+<h3 style="text-align: center;" >position: absolute 3.3</h3>
+ <div class="outsise_cub">
+    <div class="traffic_lights">
+         <div class="circle-absolute red-absolute"></div>
+         <div class="circle-absolute yellow-absolute"></div>
+         <div class="circle-absolute green-absolute"></div>
+    </div>
+</div>
+<h3 style="text-align: center;" >position: relative 3.4</h3>
  <div class="outsise_cub">
     <div class="circle-head">
          <div class="eyes left"></div>
          <div class="eyes right"></div>
          <div class="nose"></div>
          <div class="mouth"></div>
+    </div>
+</div>
+<h3 style="text-align: center;" >position: absolute 3.4</h3>
+ <div class="outsise_cub">
+    <div class="circle-head">
+         <div class="eyes-absolute left-absolute"></div>
+         <div class="eyes-absolute right-absolute"></div>
+         <div class="nose-absolute"></div>
+         <div class="mouth-absolute"></div>
     </div>
 </div>
 </body>
